Resolves issue where static-columns would overflow out of div

--- a/src/styles/base/Base.scss
+++ b/src/styles/base/Base.scss
@@ -21,6 +21,8 @@ html {
 
 .static-columns {
   display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
 .static-column {
